feat: implement support for databases multiple queries
Related work items: #296265